# deep-learning-doc-classification

./: .env.cluster  .env.mini  .gitignore  CLAUDE.md  README.md  config.cluster  config.local-full  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-notebook-foundation-data-features/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-RESEARCH.md
.planning/phases/02.1-hybrid-fusion-positional-encoding/: 02.1-01-PLAN.md  02.1-01-SUMMARY.md  02.1-02-PLAN.md  02.1-02-SUMMARY.md  02.1-RESEARCH.md
.planning/phases/02.2-text-aware-hybrid-gnn/: 02.2-01-PLAN.md  02.2-01-SUMMARY.md  02.2-02-PLAN.md  02.2-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: EDL-Group1-Project-Proposal.docx
notebooks/: README.md  rvl-cdip-dataloader.ipynb  rvl-cdip-graphsage.ipynb  rvl-cdip-hybrid-graphsage.ipynb  rvl-cdip-resnet50-baseline.ipynb  rvl-cdip-text-aware-hybrid.ipynb
reference/: RVL-CDIP_ResNet50.ipynb
scripts/: start-cluster.sh
src/: config.py  data.py  features.py  graph.py  model.py  text_features.py
