[project]
name = "deep-learning-doc-classification"
version = "0.1.0"
description = ""
authors = [
    {name = "sagerstack",email = "sagarpratapsingh15@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14.1"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
